tests/data/multiple_routes.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-stable
spec:
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollouts-demo

---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-canary
spec:
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollouts-demo

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: rollouts-demo-prod
  annotations:
    haproxy.router.openshift.io/disable_cookies: "true"
spec:
  to:
    kind: Service
    name: rollouts-demo-stable
    weight: 100
  alternateBackends:
    - kind: Service
      name: rollouts-demo-canary
      weight: 0
  port:
    targetPort: http
  wildcardPolicy: None

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: rollouts-demo-stage
  annotations:
    haproxy.router.openshift.io/disable_cookies: "true"
spec:
  to:
    kind: Service
    name: rollouts-demo-stable
    weight: 100
  alternateBackends:
    - kind: Service
      name: rollouts-demo-canary
      weight: 0
  port:
    targetPort: http
  wildcardPolicy: None

---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
spec:
  replicas: 5
  strategy:
    canary:
      canaryService: rollouts-demo-canary
      stableService: rollouts-demo-stable
      steps:
        - setWeight: 50
        - pause: {}
      trafficRouting:
        plugins:
          argoproj-labs/openshift:
            routes:
              - rollouts-demo-prod
              - rollouts-demo-stage
            namespace: argo-rollouts
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
        - name: rollouts-demo
          # image: argoproj/rollouts-demo:blue
          image: quay.io/nginx/nginx-unprivileged
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
