tests/data/sample_rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
spec:
  replicas: 5
  strategy:
    canary:
      canaryService: rollouts-demo-canary
      stableService: rollouts-demo-stable
      steps:
        - setWeight: 20
        - pause: {}
        - setWeight: 70
        - pause: {}
      trafficRouting:
        plugins:
          argoproj-labs/openshift:
            routes:
              - rollouts-demo
            namespace: argo-rollouts-e2e
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
        - name: rollouts-demo
          image: quay.io/nginx/nginx-unprivileged
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
